# ferango

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: tauri-run.cjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/mongo/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: ConnectionTree.vue  QueryEditor.vue  ResultViewer.vue  ScriptBrowser.vue
src/lib/: monaco-workers.ts  tauri.ts
src/stores/: connections.ts  editor.ts  settings.ts
