[package]
name = "ferango"
version = "0.3.0"
description = "Fast, lightweight MongoDB GUI — built with Rust and Tauri"
authors = ["Ferango contributors"]
edition = "2021"

[lib]
name = "ferango_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
dirs = "5"
futures-util = "0.3.32"
zip = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", features = ["json"] }
